@@ -24,7 +24,7 @@ namespace System
 	{
 		private static OpSys _os = Platform.OS;
 
-		[TODO]
+		//[MonoTODO]
 		public enum SpecialFolder
 		{	// TODO: Determine if these windoze style folder identifiers 
 			//       have unix/linux counterparts
@@ -53,7 +53,7 @@ namespace System
 		/// <summary>
 		/// Gets the command line for this process
 		/// </summary>
-		[TODO]
+		//[MonoTODO]
 		public static string CommandLine
 		{	// TODO: Coordinate with implementor of EnvironmentPermissionAttribute
 			[EnvironmentPermissionAttribute(SecurityAction.Demand, Read = "COMMANDLINE")]
@@ -89,7 +89,7 @@ namespace System
 		/// <summary>
 		/// Gets or sets the exit code of this process
 		/// </summary>
-		[TODO]
+		//[MonoTODO]
 		public static int ExitCode
 		{	// TODO: find a way to implement this property
 			get
@@ -194,7 +194,7 @@ namespace System
 		/// <summary>
 		/// Get the user name of current process is running under
 		/// </summary>
-		[TODO]
+		//[MonoTODO]
 		public static string UserName
 		{
 			get
