@@ -116,7 +116,7 @@ namespace System {
 			return Parse (s, style, null);
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static long Parse (string s, NumberStyles style, IFormatProvider fp)
 		{
 			// TODO: Implement me
