@@ -82,7 +82,7 @@ namespace System {
 			return Parse (s, style, null);
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static float Parse (string s, NumberStyles style, IFormatProvider fp)
 		{
 			// TODO: Implement me
@@ -104,7 +104,7 @@ namespace System {
 			return ToString(format, null);
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public string ToString (string format, IFormatProvider fp)
 		{
 			// TODO: Implement me.
