@@ -151,7 +151,7 @@ namespace System {
 				this.c_str[i] = (char) *(value + startIndex + i);
 		}
 
-		[CLSCompliant(false)][TODO]
+		[CLSCompliant(false)]//[MonoTODO]
 		unsafe public String (sbyte *value, int startIndex, int length, Encoding enc)
 		{
 			// FIXME: implement me
@@ -187,7 +187,7 @@ namespace System {
 			return str.Length;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		private static char tolowerordinal (char c)
 		{
 			// FIXME: implement me
@@ -257,7 +257,7 @@ namespace System {
 		}
 
 		// Methods
-		[TODO]
+		//[MonoTODO]
 		public object Clone ()
 		{
 			// FIXME: implement me
@@ -323,7 +323,7 @@ namespace System {
 			return ((int) (strA.c_str[i] - strB.c_str[i]));
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static int Compare (string strA, string strB, bool ignoreCase, CultureInfo culture)
 		{
 			// FIXME: implement me
@@ -388,7 +388,7 @@ namespace System {
 			return ((int) (strA[indexA + i] - strB[indexB + i]));
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static int Compare (string strA, int indexA, string strB, int indexB,
 					   int length, bool ignoreCase, CultureInfo culture)
 		{
@@ -717,35 +717,35 @@ namespace System {
 			return a == b;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static string Format (string format, object arg0)
 		{
 			// FIXME: implement me
 			return null;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static string Format (string format, params object[] args)
 		{
 			// FIXME: implement me
 			return null;
 		}
 		
-		[TODO]
+		//[MonoTODO]
 		public static string Format (IFormatProvider provider, string format, params object[] args)
 		{
 			// FIXME: implement me
 			return null;
 		}
 		
-		[TODO]
+		//[MonoTODO]
 		public static string Format (string format, object arg0, object arg1)
 		{
 			// FIXME: implement me
 			return null;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public static string Format (string format, object arg0, object arg1, object arg2)
 		{
 			// FIXME: implement me
@@ -753,7 +753,7 @@ namespace System {
 		}
 
 		//public CharEnumerator GetEnumerator ()
-		[TODO]
+		//[MonoTODO]
                 public IEnumerator GetEnumerator ()
 		{
 			// FIXME: implement me
@@ -1372,21 +1372,21 @@ namespace System {
 			return res;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public bool ToBoolean (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 		
-		[TODO]
+		//[MonoTODO]
 		public byte ToByte (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 		
-		[TODO]
+		//[MonoTODO]
 		public char ToChar (IFormatProvider provider)
 		{
 			// FIXME: implement me
@@ -1413,7 +1413,7 @@ namespace System {
 			return chars;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public DateTime ToDateTime (IFormatProvider provider)
 		{
 			// FIXME: implement me
@@ -1421,35 +1421,35 @@ namespace System {
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public decimal ToDecimal (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public double ToDouble (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public short ToInt16 (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public int ToInt32 (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public long ToInt64 (IFormatProvider provider)
 		{
 			// FIXME: implement me
@@ -1469,7 +1469,7 @@ namespace System {
 			return res;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public string ToLower (CultureInfo culture)
 		{
 			// FIXME: implement me
@@ -1477,14 +1477,14 @@ namespace System {
 
 		}
 
-		[CLSCompliant(false)][TODO]
+		[CLSCompliant(false)]//[MonoTODO]
 		public sbyte ToSByte (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public float ToSingle (IFormatProvider provider)
 		{
 			// FIXME: implement me
@@ -1496,35 +1496,35 @@ namespace System {
 			return this;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public string ToString (IFormatProvider format)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public object ToType (Type conversionType, IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[CLSCompliant(false)][TODO]
+		[CLSCompliant(false)]//[MonoTODO]
 		public ushort ToUInt16 (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[CLSCompliant(false)][TODO]
+		[CLSCompliant(false)]//[MonoTODO]
 		public uint ToUInt32 (IFormatProvider provider)
 		{
 			// FIXME: implement me
 			throw new NotImplementedException ();
 		}
 
-		[CLSCompliant(false)][TODO]
+		[CLSCompliant(false)]//[MonoTODO]
 		public ulong ToUInt64 (IFormatProvider provider)
 		{
 			// FIXME: implement me
@@ -1544,7 +1544,7 @@ namespace System {
 			return res;
 		}
 
-		[TODO]
+		//[MonoTODO]
 		public string ToUpper (CultureInfo culture)
 		{
 			// FIXME: implement me
