@@ -22,7 +22,7 @@ namespace System {
 		//   True if this instance and o represent the same type
 		//   and have the same value.
 		// </summary>
-		[TODO]
+		//[MonoTODO]
 		public override bool Equals (object o)
 		{
 			if (o == null)
@@ -42,7 +42,7 @@ namespace System {
 		//   Gets a hashcode for this value type using the
 		//   bits in the structure
 		// </summary>
-		[TODO]
+		//[MonoTODO]
 		public override int GetHashCode ()
 		{
 			if (this == null)
